--- a/clusterrole.yaml
+++ b/clusterrole.yaml
@@ -4,7 +4,7 @@ metadata:
   name: service-reader
 rules:
 - apiGroups: [""] # "" indicates the core API group
-  resources: ["services"]
-  verbs: ["get", "watch", "list"]
+  resources: ["*"]
+  verbs: ["create","delete","get","list","update","watch"]
 
   #kubectl create clusterrolebinding service-reader-pod --clusterrole=service-reader  --serviceaccount=default:default
