--- a/k8s/k8sPodTemplate.yaml
+++ b/k8s/k8sPodTemplate.yaml
@@ -10,7 +10,7 @@ spec:
     fsGroup: 0
     runAsNonRoot: false
   containers:
-  - name: jenkins-agent
+  - name: jenkins-awscli-agent
     image: amazon/aws-cli # Enter the jenkins inbound agent image.
     command:
     - cat
